[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "azula"
description = "Diffusion models in PyTorch"
authors = [
  {name = "The Probabilists", email = "theprobabilists@gmail.com"}
]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "einops>=0.7.0",
  "gdown>=5.1.0",
  "torch>=2.0.0",
  "torchvision>=0.15.0",
]
dynamic = ["version"]
keywords = [
  "torch",
  "diffusion models",
  "probability",
  "distribution",
  "generative",
  "deep learning",
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "ipykernel>=6.29.0",
  "pre-commit>=3.7.0",
  "ruff==0.9.9",
]
docs = [
  "docutils==0.19",
  "furo==2024.5.6",
  "myst-nb==1.0.0",
  "sphinx==7.3.7",
]
test = [
  "pytest>=8.0.0",
]

[project.urls]
documentation = "https://azula.readthedocs.io"
source = "https://github.com/probabilists/azula"
tracker = "https://github.com/probabilists/azula/issues"

[tool.ruff]
extend-include = ["*.ipynb"]
line-length = 99

[tool.ruff.lint]
extend-select = ["ANN", "B", "I", "UP", "W"]
ignore = ["ANN002", "ANN003", "E731", "E741"]
preview = true

[tool.ruff.lint.extend-per-file-ignores]
"*.ipynb" = ["ANN", "E402"]
"azula/plugins/*/_src/**.py" = ["ANN"]

[tool.ruff.lint.isort]
lines-between-types = 1
relative-imports-order = "closest-to-furthest"
section-order = ["future", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
preview = true

[tool.setuptools.dynamic]
version = {attr = "azula.__version__"}

[tool.setuptools.package-data]
azula = ["plugins/*/*.yaml"]

[tool.setuptools.packages.find]
include = ["azula*"]
